<resources>
    <string name="app_name">Interval Timer</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="routine_text">Timer Routines</string>
    <string name="create_routine_text">Create Routine</string>
    <string name="contact_me_text">Contact Me</string>
    <string name="action_contact_message">Email Me: dkappus@student.cvtc.edu</string>
    <string name="timer_text">Timer</string>
    <string name="task_name_text">Task:</string>
    <string name="task_name_hint">Task Name</string>
    <string name="duration_label_text">Duration:</string>
    <string name="duration_editText_text">00:00:00</string>
    <string name="add_task_btn">Add Task</string>
    <string name="add_routine_btn">Add Routine</string>
    <string name="routine_name_text">Enter Routine Name</string>
    <string name="tasks_label_text">Time</string>
    
    <string-array name="interval_timer_routine_name">
        <item>Neighborhood Walk/Run</item>
        <item>School Work</item>
        <item>House Chores</item>
        <item>Monday Workout</item>
        <item>Tuesday Workout</item>
        <item>Wednesday Workout</item>
        <item>Thursday Workout</item>
        <item>Friday Workout</item>
    </string-array>

    <string-array name="interval_timer_routine_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="interval_timer_tasks">
        <item>00:25:00</item>
        <item>04:00:00</item>
        <item>01:00:00</item>
        <item>00:30:00</item>
        <item>00:70:00</item>
        <item>00:20:00</item>
        <item>02:00:25</item>
        <item>00:50:59</item>
    </string-array>

    <string-array name="Tasks">
        <item>Walk</item>
        <item>Run</item>
        <item>Play</item>
    </string-array>
</resources>